<resources>
    <string name="app_name">ラボ入退室管理</string>
    <string name="enter">入室</string>
    <string name="exit">退室</string>
    <string name="register">登録</string>
    <string name="edit">編集</string>
    <string name="history">履歴</string>
    <string name="enter_label">学生証をスマホの裏側にスキャンして入室</string>
    <string name="exit_label">学生証をスマホの裏側にスキャンして退室</string>
    <string name="register_label">学生証をスマホの裏側にスキャンして登録</string>
    <string name="edit_label">学生証をスマホの裏側にスキャンして編集</string>
    <string name="enter_button">enter_button</string>
    <string name="exit_button">exit_button</string>
    <string name="background">background</string>
    <string name="lab_label">所属</string>
    <string name="lab_hint">所属を入力してください</string>
    <string name="name_hint">氏名を入力してください</string>
    <string name="name_label">氏名</string>
    <string name="studentId_label">学籍番号</string>
    <string name="coretime_label">コアタイム</string>
    <string name="start_end">〜</string>
    <string name="access_time_label">入退室時間</string>
    <string name="confirmation_label_1">こんにちは</string>
    <string name="confirmation_label_2">確認しました</string>
    <string name="student_id_label">学籍番号</string>
    <string name="student_id_hint">学籍番号を入力してください</string>
    <string name="core_time_label">コアタイム</string>
    <string name="core_time_custom_label">カスタム</string>
    <string name="default_time">00:00</string>
    <string name="monday">月曜日</string>
    <string name="tuesday">火曜日</string>
    <string name="wednesday">水曜日</string>
    <string name="thursday">木曜日</string>
    <string name="friday">金曜日</string>
    <string name="saturday">土曜日</string>
    <string name="sunday">日曜日</string>
    <string name="coretime_start">XX:XX</string>
    <string name="coretime_end">XX:XX</string>
    <string name="monday_coretime_start">XX:XX</string>
    <string name="monday_coretime_end">XX:XX</string>
    <string name="tuesday_coretime_start">XX:XX</string>
    <string name="tuesday_coretime_end">XX:XX</string>
    <string name="wednesday_coretime_start">XX:XX</string>
    <string name="wednesday_coretime_end">XX:XX</string>
    <string name="thursday_coretime_start">XX:XX</string>
    <string name="thursday_coretime_end">XX:XX</string>
    <string name="friday_coretime_start">XX:XX</string>
    <string name="friday_coretime_end">XX:XX</string>
    <string name="saturday_coretime_start">XX:XX</string>
    <string name="saturday_coretime_end">XX:XX</string>
    <string name="sunday_coretime_start">XX:XX</string>
    <string name="sunday_coretime_end">XX:XX</string>

</resources>
