<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dayLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/monday"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/startcoretimeBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_time"
        android:inputType="time"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/coretime_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="~" />

    <EditText
        android:id="@+id/endcoretimeBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_time"
        android:inputType="time"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/isCoreDayBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/core_time_label"
        android:textSize="12sp" />

</LinearLayout>