<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geeksonthegate.laboratoryattendancesystemwithidentificationcard.LabSettingActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_form" />

    <TextView
        android:id="@+id/lab_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/lab_label"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="28dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:text="@string/name_label"
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/studentId_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/studentId_label"
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/studentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentId_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/coreTime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coreTime_label"
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="222dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sunday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/saturday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/friday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/thursday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/wednesday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/tuesday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/monday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/suday_start_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_end"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/coreTime_start"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coreTime_start"
        app:layout_constraintTop_toTopOf="@+id/coreTime_start"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/core_time_custom_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/core_time_custom_label"
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="286dp" />

    <TextView
        android:id="@+id/coreTime_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/coreTime_start"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coreTime_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/coreTime_end"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/coreTime_end"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/suday_start_end_label"
        app:layout_constraintStart_toEndOf="@+id/suday_start_end_label"
        app:layout_constraintTop_toTopOf="@+id/suday_start_end_label"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/core_time_custom_label"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/monday"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tuesday"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="437dp" />

    <TextView
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="464dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="464dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/saturday_start_end_label"
        tools:layout_editor_absoluteY="437dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/friday_start_end_label"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/thursday_start_end_label"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/wednesday_start_end_label"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/tuesday_start_end_label"
        tools:layout_editor_absoluteY="329dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/monday_start_end_label"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/saturday"
        tools:layout_editor_absoluteY="464dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/saturday"
        tools:layout_editor_absoluteY="437dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/friday"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/wednesday"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        tools:layout_editor_absoluteY="329dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/monday"
        tools:layout_editor_absoluteY="302dp" />

</android.support.constraint.ConstraintLayout>
